--- a/frontend/HR VIEW/styles/hrDash.css
+++ b/frontend/HR VIEW/styles/hrDash.css
@@ -1317,12 +1317,12 @@
 }
 
 .lessBody {
-  display: flex;
-  flex-direction: column;
-  /* gap: 1vh; */
-  width: 100%;
-  padding-top: 1vh;
-  background-color: white;
+    display: flex;
+    flex-direction: column;
+    /* gap: 1vh; */
+    width: 100%;
+    padding-top: 1vh;
+    background-color: white;
 }
 
 .studentsList {
@@ -1352,23 +1352,619 @@
 }
 
 .nameUnitContain {
-  display: flex;
-  flex-direction: column;
-  background-color: white;
+    display: flex;
+    flex-direction: column;
+    background-color: white;
 }
 
 .nameBox {
-  font-weight: 300;
-  background-color: white;
-  font-size: 16px;
-  font-family: Nunito Sans;
+    font-weight: 300;
+    background-color: white;
+    font-size: 16px;
+    font-family: Nunito Sans;
 }
 
 .unitBox {
-  color: #848484;
-  font-size: 14px;
-  margin-top: 2px;
-  background-color: white;
-  font-family: Nunito Sans;
-  font-weight: 200;
+    color: #848484;
+    font-size: 14px;
+    margin-top: 2px;
+    background-color: white;
+    font-family: Nunito Sans;
+    font-weight: 200;
+}
+
+@media screen and (max-width:450px) {
+
+    .header {
+        height: 60px;
+        padding: 1vh 3vh;
+    }
+
+    .logoContain {
+        height: 32px;
+        width: 100px;
+        /* border: 1px solid green; */
+    }
+
+    .logoContain img {
+        height: 100%;
+    }
+
+    .bodyContain {
+        padding: 2vh 3vh;
+    }
+
+    /* <!-- -----------Header section------------ --> */
+
+
+    .headerContain {
+        height: 76px;
+        flex-direction: column;
+        align-items: normal;
+    }
+
+    .headerText {
+        font-size: 20px;
+        font-weight: 600;
+    }
+
+    .addBtnContain {
+        height: 34px;
+        width: 60%;
+        flex-direction: row-reverse;
+        justify-content: right;
+        align-self: flex-end;
+        gap: 1vh;
+    }
+
+    .addStudent {
+        height: 100%;
+        width: 40%;
+        font-size: 10px;
+        font-weight: 300;
+    }
+
+    .assignSuper {
+        width: 45%;
+        font-size: 10px;
+        font-weight: 500;
+    }
+
+    /* <!-- ------End of Header section------------ --> */
+
+    /* ---------Add student Modal------ */
+
+    .overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.75);
+        /* display: none; */
+        z-index: 10;
+    }
+
+    .addModal {
+        height: auto;
+        width: 90%;
+        margin: 3vh auto;
+        padding: 3vh 2.5vh;
+    }
+
+    .modalHead {
+        height: 30px;
+
+    }
+
+    .headText {
+        font-size: 14px;
+        font-weight: 400;
+    }
+
+    .closeBox {
+        height: 100%;
+    }
+
+    .closeBox img {
+        -webkit-user-drag: none;
+        cursor: pointer;
+        width: 100%;
+        background-color: #FFFFFF;
+    }
+
+    .studentInfo {
+        height: auto;
+        width: 100%;
+        /* border: 1px solid blue; */
+        margin-top: 2vh;
+        background-color: #FFFFFF;
+    }
+
+    .NameFieldContain {
+        height: 30px;
+    }
+
+    .NameFieldText {
+        height: 100%;
+        width: auto;
+        /* border: 1px solid purple; */
+        color: #000;
+        font-family: Nunito Sans;
+        font-weight: 500;
+        font-size: 12px;
+    }
+
+    .NameFieldInput {
+        height: 100%;
+        width: 65%;
+        /* border: 1px solid black; */
+        background-color: #FFFFFF;
+    }
+
+    .NameFieldInput input {
+        font-size: 12px;
+    }
+
+    .levelContain {
+        justify-content: left;
+        gap: 1vh;
+    }
+
+    .NameFieldContain2 {
+        height: 30px;
+        width: 70%;
+    }
+
+    .NameFieldText2 {
+        color: #000;
+        font-weight: 500;
+        font-size: 12px;
+    }
+
+    .NameFieldInput2 input {
+        font-size: 12px;
+    }
+
+    .genderGroup {
+        height: 30px;
+        width: auto;
+    }
+
+    .customRadio {
+        font-size: 12px;
+    }
+
+    .radioCircle {
+        width: 20px;
+        height: 20px;
+    }
+
+    .radioCircle::after {
+        width: 10px;
+        height: 10px;
+    }
+
+    .caretdown {
+        height: 100%;
+        width: 23%;
+        /* border: 1px solid brown; */
+    }
+
+
+    .caretdown img {
+        height: 70%;
+        -webkit-user-drag: none;
+        background-color: #FFFFFF;
+    }
+
+    /* ------unit dropdown----- */
+
+    .unitDrop {
+        height: 150px;
+        top: 35px;
+    }
+
+    .unitLIst {
+        height: 30px;
+        font-size: 12px;
+    }
+
+    .unitLIst:hover {
+        background-color: #F5F5F5;
+    }
+
+    .saveBtn {
+        height: 30px;
+        font-size: 12px;
+    }
+
+
+    /* -------End of modal-------- */
+    /* Mini Modal */
+
+    .confirmModal {
+        width: 90%;
+        background-color: #FFFFFF;
+        margin: 50vw auto;
+    }
+
+    /* ------------Success modal--- */
+
+    .successModal {
+        width: 90%;
+        margin: 50vw auto;
+    }
+
+    /* ----------Assign Supervisor Modal---- */
+
+    .assignSuperModal {
+        height: 193px;
+        width: 95%;
+        margin: 50vw auto;
+
+    }
+
+    .superBody {
+        height: auto;
+        margin-top: 1vh;
+    }
+
+    .superUnitContain {
+        height: 40px;
+        gap: 1vh;
+        margin-bottom: 1vh;
+    }
+
+    .superUnit {
+        font-size: 12px;
+        font-weight: 400;
+        color: #000;
+        background-color: #FFFFFF;
+    }
+
+    .superUnitDisplay {
+        height: 24px;
+        width: 75%;
+    }
+
+    .superUnitDisplay input {
+        font-size: 12px;
+    }
+
+    .superDrop {
+        height: 150px;
+        top: 80px;
+    }
+
+    .superDisplay {
+        height: 24px;
+        width: 70%;
+    }
+
+    .superDisplay input {
+        font-size: 12px;
+    }
+
+    .superFooter {
+        height: 40px;
+    }
+
+    .superFooterTxt {
+        height: 100%;
+        width: 70%;
+        font-size: 12px;
+    }
+
+    .assignBtn {
+        height: 70%;
+        width: 15%;
+        font-size: 12px;
+    }    
+    /* -----Hero section----- */
+
+    .totesContain {
+        height: 80px;
+        align-items: center;
+        justify-content: left;
+        margin-bottom: 3vw;
+    }
+
+    .toteStudent {
+        height: 85%;
+        width: 35%;
+        /* border: 1px solid black; */
+    }
+
+    .totesHeadTxt {
+        font-size: 13px;
+        font-weight: 400;
+    }
+
+    .totesHeadNum {
+        font-size: 20px;
+    }
+
+    .topology {
+        display: none;
+    }
+
+    .totesGender {
+        height: 85%;
+        width: 65%;
+        gap: 1vh;
+        justify-content: space-between;
+    }
+
+    .maleImg {
+        height: auto;
+        width: auto;
+    }
+
+    .maleImg img {
+        height: 40px;
+        width: 41px;
+    }
+
+    .maleTxt {
+        font-size: 13px;
+    }
+
+    .maleNum {
+        font-size: 20px;
+    }
+
+    /* ----------End of hero section----- */
+
+    .majorSect {
+        height: auto;
+        width: 100%;
+        /* border: 1px solid red; */
+        margin-top: 1vw;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    .moreMajor {
+        height: 100%;
+        width: 100%;
+    }
+
+    .topMore {
+        height: 78px;
+        width: 100%;
+    }
+
+    .superCard {
+        padding: 1vh;
+    }
+
+    .supercardHead {
+        flex-direction: column;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .superHead {
+        font-size: 13px;
+
+    }
+
+    .superHead2 {
+        font-size: 13px;
+        font-weight: 500;
+
+    }
+
+    .superHead3 {
+        font-size: 13px;
+        font-weight: 500;
+        margin-bottom: 1vh;
+    }
+
+    .totesSuper {
+        font-size: 20px;
+        font-weight: 600;
+    }
+
+    .teacherContain {
+        display: none;
+    }
+
+    .statCard {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        justify-content: center;
+        padding: 0.5vh;
+    }
+
+    .statsbarContain {
+        height: 40px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        background-color: #FFFFFF;
+
+    }
+
+    .activeBar {
+        font-size: 8px;
+    }
+
+    .activeNum {
+        font-size: 8px;
+    }
+
+
+    .pastBar {
+        font-size: 8px;
+    }
+
+    .pastNum {
+        font-size: 8px;
+
+    }
+
+    .bottomMore {
+        height: auto;
+        flex-direction: column;
+    }
+
+    .unitsBarContain {
+        height: 50%;
+        width: 100%;
+        margin-bottom: 1.5vh;
+    }
+
+    .totesUnit {
+        font-size: 10px;
+        font-weight: 600;
+    }
+
+    .totesNum {
+        font-size: 14px;
+        font-weight: 500;
+    }
+
+    .superList {
+        height: 50%;
+        width: 100%;
+        background-color: #FFFFFF;
+        box-shadow: 0px 2px 10px 0px #00000029;
+        padding: 2vw 2vh;
+        margin-bottom: 1vh;
+    }
+
+    .supervisorsContain {
+        height: auto;
+        width: 100%;
+        /* border: 1px solid red; */
+        /* margin-top: 1vh; */
+        display: flex;
+        flex-direction: column;
+        /* justify-content: space-between; */
+        background-color: #FFFFFF;
+    }
+
+    .supervisor {
+        height: 30px;
+        width: 100%;
+        /* border: 1px solid blue; */
+        display: flex;
+        justify-content: space-between;
+        background-color: #FFFFFF;
+    }
+
+    .superName {
+        font-size: 10px;
+        font-weight: 400;
+        background-color: #FFFFFF;
+    }
+
+    .supervisorUnit {
+        font-size: 10px;
+        font-weight: 400;
+    }
+
+    .lessMajor {
+        height: auto;
+        width: 100%;
+        /* border: 1px solid blue; */
+        background-color: #FFFFFF;
+        box-shadow: 0px 2px 10px 0px #00000029;
+        padding: 2vh;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .lessHead {
+        height: 30px;
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        background-color: #FFFFFF;
+        /* border: 1px solid blue; */
+    }
+
+    .studentHead {
+        height: auto;
+        width: auto;
+        /* border: 1px solid red; */
+        font-family: Nunito Sans;
+        font-size: 13px;
+        user-select: none;
+        font-weight: 500;
+        display: flex;
+        align-items: center;
+        background-color: #FFFFFF;
+    }
+
+    .viewBtn {
+        height: 100%;
+        width: 18%;
+        font-size: 10px;
+        user-select: none;
+        font-weight: 600;
+    }
+
+    .lessBody {
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        /* gap: 1vh; */
+        width: 100%;
+        padding-top: 0vh;
+        background-color: white;
+        /* border: 1px solid pink; */
+    }
+
+    .studentsList {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        gap: 1vh;
+        background-color: #FFFFFF;
+        /* border: 1px solid red; */
+        margin-top: 1vh;
+        font-family: Nunito Sans;
+        font-size: 16px;
+    }
+
+    .studentName {
+        font-size: 10px;
+        font-weight: 300;
+        /* color: black; */
+        background-color: #FFFFFF;
+    }
+
+    .studentInterest {
+        font-size: 10px;
+        font-weight: 300;
+        color: #848484;
+        background-color: #FFFFFF
+    }
+
+    .nameUnitContain {
+        display: flex;
+        flex-direction: column;
+        background-color: white;
+    }
+
+    .nameBox {
+        font-weight: 500;
+        background-color: white;
+        font-size: 10px;
+        font-family: Nunito Sans;
+    }
+
+    .unitBox {
+        color: #848484;
+        font-size: 9px;
+        margin-top: 2px;
+        background-color: white;
+        font-family: Nunito Sans;
+        font-weight: 200;
+    }
 }
