--- a/frontend/STAFF VIEW/styles/log.css
+++ b/frontend/STAFF VIEW/styles/log.css
@@ -792,7 +792,9 @@
 
     .accordion{
         height: auto;
-        /* border: 1px solid purple; */
+        display: flex;
+        flex-direction: column;
+        /* border: 1px solid purple;/ */
     }
 
     .accordionItem {
