--- a/frontend/HR VIEW/styles/hrDash.css
+++ b/frontend/HR VIEW/styles/hrDash.css
@@ -1441,7 +1441,7 @@
         width: 100%;
         height: 100%;
         background: rgba(0, 0, 0, 0.75);
-        /* display: none; */
+        display: none;
         z-index: 10;
     }
 
