--- a/frontend/HR VIEW/styles/hrstudentProfile.css
+++ b/frontend/HR VIEW/styles/hrstudentProfile.css
@@ -142,7 +142,7 @@
 .photoBox img{
     width: 100%;
     height: 100%;
-    object-fit: contain; 
+    object-fit: cover; 
     border-radius: 4px;
     -webkit-user-drag: none;
 }
@@ -699,6 +699,8 @@
     justify-content: space-between;
     padding: 0vh 2vh;
     background-color: #FFFFFF;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
 }
 
 .modalBody {
@@ -823,6 +825,8 @@
     justify-content: space-between;
     padding: 0vh 1vh;
     background-color: #FFFFFF;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
 }
 
 .headText2 {
@@ -923,6 +927,8 @@
     justify-content: space-between;
     padding: 0vh 2vh;
     background-color: #FFFFFF;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
 }
 
 .modalBody {
@@ -994,4 +1000,334 @@
 
 .okayBtn2:hover {
     background-color: #aac8be;
+}
+
+@media screen and (max-width:450px) {
+    .header {
+        height: 60px;
+        padding: 1vh 3vh;
+    }
+    
+    .logoContain {
+        height: 32px;
+        width: 100px;
+        /* border: 1px solid green; */
+    }
+    
+    .logoContain img {
+        height: 100%;
+    }
+    
+    .bodyContain {
+        padding: 2vh 3vh;
+    }
+    
+    /* <!-- -----------Header section------------ --> */
+    
+    .heading{
+        height: 46px;
+    }
+    
+    .headingContain{
+        width: auto;
+        gap: 2vh;
+    }
+    
+    .headTxt{
+        font-size: 20px;
+    }
+    
+    
+    .logBtn{
+        width: 23%;
+    }
+    
+    .logBtn:hover{
+        background-color: #6BA792;
+    }
+    
+    /* ------Hero section CSS-------- */
+    
+    .heroContain{
+        height: auto;
+        width: 100%;
+        flex-direction: column;
+        /* border: 1px solid blue;  */
+        margin-bottom: 4vh;
+    }
+    
+    .photoNname{
+        height: 316px;
+        width: 100%;
+        flex-direction: column;
+        /* border: 1px solid black; */
+        gap: 1vh;
+    }
+    
+    .profilePhoto{
+        height: 221px;
+        width: 100%;
+        /* border: 2px solid blue; */
+    }
+    
+    .uploadBox{
+        height: 40px;
+        width: 100%;
+        /* border: 1px solid red; */
+        display: flex;
+        align-items: center;
+        justify-content: left;
+        cursor: pointer;
+    }
+    
+    .imgBox{
+        height: 100%;
+        width: 10%;
+        /* background-color: pink; */
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    
+    .nameInterest{
+        width: 100%;
+    }
+    
+    .johnDoe{
+        height: 50%;
+        width: 100%;
+        font-size: 25px;
+        font-weight: 600;
+    }
+    
+    .Interest{
+        height: 50%;
+    }
+    
+    .bioData{
+        height: 213px;
+        width: 100%;
+        margin-top: 2vh;
+        padding: 3vh 1vh;
+    }
+
+    .editBio{
+        width: 20%;
+    }
+    
+    
+    .bioBody{
+        height: 75%;
+        width: 95%;
+        font-weight: 400;
+        font-size: 18px;
+    }
+
+    .confirmModal {
+        width: 90%;
+        margin: 50vw auto;
+    }
+
+    .successModal2 {
+        width: 90%;
+        margin: 50vw auto;
+    }
+    
+    /* ------Info Section------- */
+    
+    .majorContainer{
+        height: auto;
+        flex-direction: column;
+        align-items:flex-end;   
+    }
+
+    .personInfo{
+        padding: 3vh 3vh;
+    }
+    
+    .titleEdit{
+        margin-bottom: 3vh;
+    }
+    
+    .infoTitle{
+        font-weight: 500;
+    }
+    
+    .infoBodyContain{
+        height: 410px;
+        flex-direction: column;
+        margin-bottom: 1vh;
+    }
+    
+    .infoBody{
+        height: 200px;
+        width: 100%;
+        /* border: 1px solid purple; */
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .halfInfo{
+        height: 48%;
+        width: 100%;
+    }
+
+    .deactivateBtn{
+        height: 34px;
+        width: 25%;
+        font-weight: 400;
+        margin-top: 2vh;
+    }
+
+    .overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.75);
+        display: none;
+        z-index: 10;
+    }
+
+    .addModal {
+        height: auto;
+        width: 90%;
+        margin: 3vh auto;
+        padding: 3vh 2.5vh;
+    }
+
+    .modalHead {
+        height: 30px;
+
+    }
+
+    .headText {
+        font-size: 14px;
+        font-weight: 400;
+    }
+
+    .closeBox {
+        height: 100%;
+    }
+
+    .closeBox img {
+        -webkit-user-drag: none;
+        cursor: pointer;
+        width: 100%;
+        background-color: #FFFFFF;
+    }
+
+    .studentInfo {
+        height: auto;
+        width: 100%;
+        /* border: 1px solid blue; */
+        margin-top: 2vh;
+        background-color: #FFFFFF;
+    }
+
+    .NameFieldContain {
+        height: 30px;
+    }
+
+    .NameFieldText {
+        height: 100%;
+        width: auto;
+        /* border: 1px solid purple; */
+        color: #000;
+        font-family: Nunito Sans;
+        font-weight: 500;
+        font-size: 12px;
+    }
+
+    .NameFieldInput {
+        height: 100%;
+        width: 65%;
+        /* border: 1px solid black; */
+        background-color: #FFFFFF;
+    }
+
+    .NameFieldInput input {
+        font-size: 12px;
+    }
+
+    .levelContain {
+        justify-content: left;
+        gap: 1vh;
+    }
+
+    .NameFieldContain2 {
+        height: 30px;
+        width: 70%;
+    }
+
+    .NameFieldText2 {
+        color: #000;
+        font-weight: 500;
+        font-size: 12px;
+    }
+
+    .NameFieldInput2 input {
+        font-size: 12px;
+    }
+
+    .genderGroup {
+        height: 30px;
+        width: auto;
+    }
+
+    .customRadio {
+        font-size: 12px;
+    }
+
+    .radioCircle {
+        width: 20px;
+        height: 20px;
+    }
+
+    .radioCircle::after {
+        width: 10px;
+        height: 10px;
+    }
+
+    .caretdown {
+        height: 100%;
+        width: 23%;
+        /* border: 1px solid brown; */
+    }
+
+
+    .caretdown img {
+        height: 70%;
+        -webkit-user-drag: none;
+        background-color: #FFFFFF;
+    }
+
+    /* ------unit dropdown----- */
+
+    .unitDrop {
+        height: 150px;
+        top: 35px;
+    }
+
+    .unitLIst {
+        height: 30px;
+        font-size: 12px;
+    }
+
+    .unitLIst:hover {
+        background-color: #F5F5F5;
+    }
+
+    .saveBtn {
+        height: 30px;
+        font-size: 12px;
+    }
+
+    .successModal {
+        width: 90%;
+        margin: 50vw auto;
+    }
+
 }
