--- a/frontend/STAFF VIEW/styles/homeGrid.css
+++ b/frontend/STAFF VIEW/styles/homeGrid.css
@@ -411,6 +411,7 @@
     
     .headerText {
         font-size: 32px;
+        font-weight: 500;
     }
     
     /* <!-- ------End of Header section------------ --> */
@@ -432,29 +433,21 @@
         width: 70%;
     }
     
-
     .searchBtn {
-        height: 100%;
-        width: 22%;
-        border-radius: 4px;
-        background-color: #CEE2DB;
-        border: 1px solid #096D49;
-        color: #096D49;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-family: Nunito Sans;
-        font-weight: 500;
-        font-size: 14px;
-        user-select: none;
-        cursor: pointer;
+        width: 20%;
+        font-weight: 600;
+        font-size: 10px;
     }
     
     .buttonContain {
         height: 30%;
         width: 50%;
         align-self: first baseline;
+    }
 
+    .allStudents {
+        font-size: 10px;
+        font-weight: 500;
     }
 
     .gridContain {
