--- a/frontend/staff-view/styles/log.css
+++ b/frontend/staff-view/styles/log.css
@@ -6,7 +6,7 @@
 
 @font-face {
     font-family: Nunito Sans;
-    src: url(/frontend/STAFF\ VIEW/fonts/Nunito_Sans/NunitoSans-VariableFont_YTLC,opsz,wdth,wght.ttf);
+    src: url(/frontend/staff-view/fonts/Nunito_Sans/NunitoSans-VariableFont_YTLC\,opsz\,wdth\,wght.ttf);
 }
 
 .header {
