--- a/frontend/supervisor-view/styles/homeListView.css
+++ b/frontend/supervisor-view/styles/homeListView.css
@@ -82,11 +82,15 @@ html, body {
 /* ========== MAIN CONTAINER ========== */
 .mainContainer {
   width: 100%;
-  height: auto;
+  height: 100vh;
   padding: 0vh 6vw;
   display: flex;
   flex-direction: column;
   background-color: #F9F9F9;
+}
+
+.mainContainer--auto {
+  height: auto;
 }
 
 /* ========== TOP SECTION ========== */
@@ -99,7 +103,7 @@ html, body {
 }
 
 /* Section Title */
-.ItHeader {
+.profilename {
   height: 50%;
   width: 100%;
   text-align: left;
@@ -108,7 +112,7 @@ html, body {
   font-family: Nunito Sans;
 }
 
-.profilename {
+.ItHeader {
   height: 50%;
   width: 100%;
   text-align: left;
