Added start date on adding students and fixed supervisors log view

--- a/frontend/supervisor-view/styles/studentLog.css
+++ b/frontend/supervisor-view/styles/studentLog.css
@@ -13,7 +13,7 @@
 /* ============================================= */
 @font-face {
     font-family: Nunito Sans;
-    src: url(/frontend/STAFF\ VIEW/fonts/Nunito_Sans/NunitoSans-VariableFont_YTLC,opsz,wdth,wght.ttf);
+    src: url(/frontend/staff-view/fonts/Nunito_Sans/NunitoSans-VariableFont_YTLC,opsz,wdth,wght.ttf);
 }
 
 /* ============================================= */
