--- a/frontend/supervisor-view/styles/homeListView.css
+++ b/frontend/supervisor-view/styles/homeListView.css
@@ -117,8 +117,9 @@ html, body {
   width: 100%;
   text-align: left;
   font-size: 20px;
-  font-weight: 400;
+  font-weight: 300;
   font-family: Nunito Sans;
+  color: gray;
 }
 
 /* ========== SEARCH BARS ========== */
