feat: Add update student functionality and improve student profile UI

--- a/frontend/supervisor-view/styles/studentProfile.css
+++ b/frontend/supervisor-view/styles/studentProfile.css
@@ -431,8 +431,9 @@
     width: 90%;
     /* border: 1px solid palevioletred; */
     display: flex;
+    flex-wrap: wrap;
     /* align-items: center; */
-    font-size: 24px;
+    font-size: 20px;
     font-family: Nunito Sans;
     font-weight: 600;
 }
